[package]
name = "hg_common"
version.workspace = true
edition.workspace = true

[lib]
name = "hg_common"
path = "src/common_lib.rs"

[dependencies]
serde      = { workspace = true }
tracing    = { workspace = true }
rusqlite   = { workspace = true }
anyhow     = { workspace = true }

strum_macros = "0.28"
serde_yaml = "0.9.34+deprecated"
